# yapyap.life

./: .gitattributes  .gitignore  .gitingore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  main.cpp  main.cs  setup_projet.sh
site/yapyap/: index.html  styles.css
